@@ -1,3 +1,8 @@
+2022-04-27  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode): Set sentence-end-double-space to t
+	when editing eclasses.
+
 2022-03-18  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.56 released.
